fix aspect button alignment

--- a/src/app/modules/metadata/aspects/aspects.component.css
+++ b/src/app/modules/metadata/aspects/aspects.component.css
@@ -51,11 +51,7 @@ ul {
 
 .tree-inline {
     position: relative;
-    top: -0.5em;
-}
-
-.drag-inline {
-    top: -0.25em;
+    top: -0.75em;
 }
 
 .nested-tree-inline {
